CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
PROJECT (ATSAPP C)
IF(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/node_modules)
	EXECUTE_PROCESS (
		COMMAND npm install
		WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
	)
ENDIF()
IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/node_modules)
    add_subdirectory(node_modules/linmap-list-vt)
ENDIF()
FIND_PACKAGE (ATS REQUIRED)
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR ”ATS Not Found!”)
ENDIF ()
ATS_INCLUDE (src/SATS src/DATS src/HATS)
IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/node_modules)
    ATS_INCLUDE(node_modules)
ENDIF()
set(CMAKE_C_FLAGS "-DATS_MEMALLOC_LIBC -D_DEFAULT_SOURCE -g")
ATS_COMPILE (TEST_SRC
	src/SATS/hashtbl_chain.sats
	src/DATS/hashtbl_chain.dats
	)
ADD_LIBRARY (hashtable-vt SHARED ${TEST_SRC})
